<resources>
	<string name="app_name">InHeartApp</string>
	<string name="save">保存</string>

	<string name="main_tab_content">内容</string>
	<string name="main_tab_consultation">问诊</string>
	<string name="main_tab_message">消息</string>
	<string name="main_tab_mine">个人中心</string>

	<!-- 问诊 -->
	<string name="consultation_type_disease">按病种</string>
	<string name="consultation_type_expert">按专家</string>


	<!-- 个人中心 -->
	<string name="login_register">立即注册</string>
	<string name="login_forget_pwd">忘记密码？</string>
	<string name="login_login">登&#160;&#160;录</string>
	<string name="login_other_login">其他登陆方式</string>
	<string name="register_phone_number_hint">请输入手机号</string>
	<string name="register_get_sms">获取验证码</string>
	<string name="register_sms_hint">请输入验证码</string>
	<string name="register_nickname_hint">请输入昵称</string>
	<string name="register_password_hint">请输入密码</string>
	<string name="register_register">注&#160;&#160;册</string>
	<string name="register_user_protocol_hint">点击注册表示同意</string>
	<string name="register_user_protocol">用户协议</string>


	<!-- hint -->
	<string name="hint_login_user_phone">请输入您的手机号</string>
	<string name="hint_login_user_pwd">请输入您的密码</string>

	<!-- 我的 -->
	<string name="mine_my_ask">我的问诊</string>
	<string name="mine_my_doctor">我的医生</string>
	<string name="mine_my_collection">我的收藏</string>
	<string name="mine_my_money">我的账户</string>
	<string name="mine_help_feedback">帮助与反馈</string>
	<string name="mine_setting">设置</string>

	<!-- 个人信息完善 -->
	<string name="user_info_complete_username">姓名</string>
	<string name="user_info_complete_id">身份证</string>
	<string name="user_info_complete_age">年龄</string>
	<string name="user_info_complete_emergency_contact">紧急联系人</string>
	<string name="user_info_complete_emergency_phone">紧急联系方式</string>
	<string name="user_info_complete_address">家庭住址</string>
	<string name="content_search">请输入搜索内容</string>


</resources>
