<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="com.inheart.inheartapp.activity.user.LoginActivity">

	<include layout="@layout/activity_base_title_bar"/>

	<EditText
		android:id="@+id/login_username_et"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="phone"
		android:hint="@string/hint_login_user_phone"
		android:layout_margin="@dimen/middle_space"/>
	<EditText
		android:id="@+id/login_pwd_et"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:hint="@string/hint_login_user_pwd"
		android:layout_marginLeft="@dimen/middle_space"
		android:layout_marginRight="@dimen/middle_space"
		android:layout_marginBottom="@dimen/middle_space"
		/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView
			android:id="@+id/login_register_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_register"
			android:textColor="@color/colorPrimary"
			android:padding="@dimen/middle_space"
			android:layout_marginLeft="@dimen/small_space"/>
		<TextView
			android:id="@+id/login_forget_pwd_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_forget_pwd"
			android:layout_alignParentRight="true"
			android:padding="@dimen/middle_space"
			android:layout_marginRight="@dimen/small_space"/>
	</RelativeLayout>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/shape_blue_bg_5r"
		android:layout_margin="@dimen/middle_space"
		android:text="@string/login_login"
		android:textSize="@dimen/middle_text_size"
		android:textColor="@color/white"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/huge_space"
		android:layout_marginRight="@dimen/huge_space">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="@color/darkgray"
			android:layout_centerInParent="true"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_other_login"
			android:layout_centerInParent="true"
			android:background="?android:colorBackground"
			android:padding="@dimen/middle_space"/>
	</RelativeLayout>



</LinearLayout>
